phatdanghoc  commit lan 1

--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
   <body>
     <h1>phat dang hoc</h1>
     <h2>nhánh main</h2>
+    <h3>* Tạo nhánh mới trên máy tính</h3>
+    <h1>
+      <b><i>"git branch -c ten_nhanh"</i></b>
+    </h1>
+    <h3>* Chuyển nhánh</h3>
+    <h1>
+      <b><i>"git checkout ten_nhanh"</i></b>
+    </h1>
   </body>
 </html>
