phatdanghoc sưa lan 2

--- a/index.html
+++ b/index.html
@@ -16,5 +16,25 @@
     <h1>
       <b><i>"git checkout ten_nhanh"</i></b>
     </h1>
+    <h3>* Push code từ nhánh con lên github</h3>
+    <h1>
+      <b
+        ><i
+          >"git push -u origin ten_nhanh"<br />
+          "git push --set-upstream origin ten_nhanh"</i
+        ></b
+      >
+    </h1>
+    <p>
+      Tham số "-u" để viết tắt cho tham số --set-upstream: thường sử dụng cho
+      lần đầu tiên <br />
+      Git sẽ tự động thiết lập một mối quan hệ theo dõi giữa nhánh cục bộ (local
+      branch) <br />
+      và nhánh từ xa (remot branch). <br />
+      Trong trường hợp này <b><i>git</i></b> tạo liên kết giữa nhánh phatdanghoc
+      trên local và nhánh phatdanghoc <br />
+      trên máy chủ git. Từ lần 2, đứng tại nhánh phatdanghoc chỉ cần dùng lệnh
+      "git push"
+    </p>
   </body>
 </html>
