--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>phat dang hoc</h1>
-    <h2>nhánh main</h2>
+    <hr />
     <h3>* Tạo nhánh mới trên máy tính</h3>
     <h1>
       <b><i>"git branch -c ten_nhanh"</i></b>
@@ -26,15 +26,46 @@
       >
     </h1>
     <p>
-      Tham số "-u" để viết tắt cho tham số --set-upstream: thường sử dụng cho
-      lần đầu tiên <br />
-      Git sẽ tự động thiết lập một mối quan hệ theo dõi giữa nhánh cục bộ (local
-      branch) <br />
-      và nhánh từ xa (remot branch). <br />
-      Trong trường hợp này <b><i>git</i></b> tạo liên kết giữa nhánh phatdanghoc
-      trên local và nhánh phatdanghoc <br />
-      trên máy chủ git. Từ lần 2, đứng tại nhánh phatdanghoc chỉ cần dùng lệnh
-      "git push"
+      <b>
+        <u>
+          <i>
+            Tham số "-u" để viết tắt cho tham số --set-upstream: thường sử dụng
+            cho lần đầu tiên <br />
+            Git sẽ tự động thiết lập một mối quan hệ theo dõi giữa nhánh cục bộ
+            (local branch) <br />
+            và nhánh từ xa (remot branch). <br />
+            Trong trường hợp này <b><i>git</i></b> tạo liên kết giữa nhánh
+            phatdanghoc trên local và nhánh phatdanghoc <br />
+            trên máy chủ git. Từ lần 2, đứng tại nhánh phatdanghoc chỉ cần dùng
+            lệnh "git push"
+          </i>
+        </u>
+      </b>
     </p>
+    <hr />
+    <h3>* Xóa nhánh cục bộ</h3>
+    <p>
+      <b
+        ><i><u>Không thể đứng tại nhánh đó để xóa.</u></i></b
+      >
+    </p>
+    <h1>
+      <b
+        ><i
+          >"git branch -d ten_nhanh"<br />
+          "git branch -D ten_nhanh"</i
+        ></b
+      >
+    </h1>
+    <p>
+      <b
+        ><i><u>git branch -D ten_nhanh là lệnh ép xóa</u></i></b
+      >
+    </p>
+    <hr />
+    <h3>* Xóa nhánh github</h3>
+    <h1>
+      <b><i>"git push -d origin ten_nhanh"</i></b>
+    </h1>
   </body>
 </html>
